Update talk page URL

--- a/index.html
+++ b/index.html
@@ -395,8 +395,8 @@
 						<a href="https://github.com/xrubioj/"><i class="fa fa-github" aria-hidden="true"></i>&nbsp;https://github.com/xrubioj/</a>
 					</p>
 					<p style="line-height: 0.6em"><small>This talk is available at:</small><br>
-						<a href="https://xrubio.com/talks/" style="font-size: 0.6em">
-						https://xrubio.com/talks/</a>
+						<a href="https://xrubio.com/talks/talk-android-custom-controls-and-canvas/" style="font-size: 0.6em">
+						https://xrubio.com/talks/talk-android-custom-controls-and-canvas/</a>
 					</p>
 				</section>
 
